tests/ui/implied-bounds/cve-rs-lifetime-expansion.stderr
error[E0308]: mismatched types
  --> $DIR/cve-rs-lifetime-expansion.rs:25:44
   |
LL |     let f: for<'x> fn(_, &'x T) -> &'b T = lifetime_translator;
   |            -----------------------------   ^^^^^^^^^^^^^^^^^^^ types differ
   |            |
   |            expected due to this
   |
   = note: expected fn pointer `for<'x> fn(_, &'x T) -> &'b T`
                 found fn item `for<'a, 'b> fn(&'a &'b (), &'b _) -> &'a _ {lifetime_translator::<_>}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
